14_array_max/grade.txt
Grading at Sun Sep 29 17:19:20 UTC 2019
Attempting to compile arrayMax.c 
arrayMax.c: In function ‘arrayMax’:
arrayMax.c:9:20: error: comparison between pointer and integer [-Werror]
       if (array[i] > Max){
                    ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
